// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip should render a Chip 1`] = `
<div>
  <span
    class="clickable svelte-dk7ls5"
    data-testid="chip"
  >
    test-label
  </span>
  
</div>
`;

exports[`Chip should render an active Chip 1`] = `
<div>
  <span
    class="active clickable svelte-dk7ls5"
    data-testid="chip"
  >
    test-label
  </span>
  
</div>
`;
